<resources>
    <string name="app_name">Application2</string>
    <string name="arrow">arrow</string>
    <string name="hradminpro">HRAdminPro</string>
    <string name="group_image">Group</string>
    <string name="login_illustration">Login Illustration</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="todo">TODO</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="welcome_back_admin">Welcome Back, Admin</string>
    <string name="dashboard_overview">Dashboard Overview:</string>
    <string name="total_employees">Total Employees</string>
    <string name="_150">150</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="_5">5</string>
    <string name="back_to_login">Back to Login</string>
    <string name="employee_management_icon">Employee Management Icon</string>
    <string name="employee_management">Employee Management</string>
    <string name="holiday_requests_icon">Holiday Requests Icon</string>
    <string name="holiday_requests">Holiday Requests</string>
    <string name="notifications_icon">Notifications Icon</string>
    <string name="notifications">Notifications</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="settings">Settings</string>
    <string name="quick_add_icon">Quick Add Icon</string>
    <string name="quick_add">Quick Add</string>
    <string name="view_all_icon">View All Icon</string>
    <string name="view_all">View All</string>
    <string name="back">Back</string>
    <string name="settings_title">Settings</string>
    <string name="app_preferences">App Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enter_username_email">Enter Username/Email</string>
    <string name="username_email">Username/Email</string>
    <string name="account_settings">Account Settings</string>
    <string name="email_alerts">Email Alerts</string>
    <string name="language">Language</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="push">Push</string>
    <string name="add_employee">Add Employee</string>
    <string name="sort_filter">Sort/Filter</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_employee">Search Employee</string>
    <string name="password_rest_successful">Password Rest Successful</string>
    <string name="rest_confirmation_message">Your password has been successfully reset. You can now use your new password to log in to the system. .</string>
    <string name="done">Done</string>
    <string name="tick">Tick</string>
    <string name="new_employee_added">New Employee Added</string>
    <string name="employee_image">Employee Image</string>
    <string name="view">View</string>
    <string name="employee_image2">Employee Image</string>
    <string name="new_employee_details">New Employee Details</string>
    <string name="name">Name</string>
    <string name="enter_employee_s_name">Enter employee\'s name</string>
    <string name="position">Position</string>
    <string name="enter_job_position">Enter job position</string>
    <string name="id">ID Number</string>
    <string name="enter_id">Enter ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="employee_image3">Employee Image</string>
    <string name="jane_smith">Jane Smith</string>
    <string name="ui_designer">UI Designer</string>
    <string name="emma_watson">Emma Watson</string>
    <string name="graphic_designer">Graphic Designer</string>
    <string name="john_doe">John Doe</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="employee_image4">Employee Image</string>
    <string name="michael_brown">Michael Brown</string>
    <string name="project_manager">Project Manager</string>
    <string name="employee_image5">Employee Image</string>
    <string name="rosie_meadowfield">Rosie Meadowfield</string>
    <string name="employee_image6">Employee Image</string>
    <string name="hamaza_al_biruni">Hamaza Al Biruni</string>
    <string name="welcome">welcome\n</string>
    <string name="app_title">WorkConnect</string>
    <string name="page_title">Holiday Request Details</string>
    <string name="reason_for_leave_header">Reason for Leave</string>
    <string name="reason_for_leave_hint">e.g Vacation</string>
    <string name="holiday_start_date">Holiday Start Date</string>
    <string name="holiday_start_date_hint">Select Start Date</string>
    <string name="end_date_header">End Date</string>
    <string name="end_date_hint">Select End Date</string>
    <string name="additional_comments_header">Additional Comments</string>
    <string name="additional_comments_hint">Add any additional information</string>
    <string name="submit_request">Submit Request</string>
    <string name="calendar_description">Calendar graphic</string>
    <string name="welcome_message">Welcome Back,</string>
    <string name="upcoming_holidays_title">Upcoming Holidays</string>
    <string name="holiday_details">Christmas\n25th December 2024</string>
    <string name="my_profile_button">My Profile</string>
    <string name="request_holiday_button">Request Holiday</string>
    <string name="notifications_button">Notifications</string>
    <string name="settings_button">Settings</string>
    <string name="holiday_remaining">Loading holiday entitlement…</string>
    <string name="two_factor">Two-Factor Authentication</string>
    <string name="password_modification">Change Password</string>
    <string name="notificationTitle">Notifications</string>
    <string name="icon_reminder">Event Reminder Icon</string>
    <string name="reminder_event">Event Reminder</string>
    <string name="notification_text">Team meeting scheduled for tomorrow at 10 A.M</string>
    <string name="notification_time">1 day ago</string>
    <string name="icon_security">Security Notice Icon</string>
    <string name="security_notice">Security Notice Icon</string>
    <string name="notifications_text2">Review your account security settings</string>
    <string name="notification_time2">2 hours ago</string>
    <string name="icon_alert">System Alert Icon</string>
    <string name="notification_text3_title">System Alert</string>
    <string name="notification_text3">Scheduled maintenance is planned for tonight at 11 PM.</string>
    <string name="notification_time3">1 day ago</string>
    <string name="Holiday_request_title">Holiday Requests</string>
    <string name="holiday_requests_details_title">Holiday Requests Details</string>
    <string name="reason_for_leave_header1">Reason for Leave</string>
    <string name="vacation">Vacation</string>
    <string name="beginning_date">Start Date</string>
    <string name="random_date">20/12/2023</string>
    <string name="end_date">End Date</string>
    <string name="random_end_date">25/12/2023</string>
    <string name="additional_information">Additional Information</string>
    <string name="random_information">I want to go to Ibiza</string>
    <string name="reject_btn">Reject</string>
    <string name="approve_btn">Approve</string>
    <string name="holiday_requests2">Holiday Requests</string>
    <string name="rosie_cole">Rosie Cole</string>
    <string name="request_20th_25th_dec">Request 20th-25th Dec</string>
    <string name="status_pending">Status: Pending</string>
    <string name="hamza_al_biruni">Hamza Al Biruni</string>
    <string name="request_15th_20th_feb">Request 15th-20th Feb</string>
    <string name="request_1st_5th_jan">Request 1st-5th Jan</string>
    <string name="status_rejected">Status: Rejected</string>
    <string name="request_reviewed_successfully">Request Reviewed Successfully</string>
    <string name="approve_holiday_message">You have approved the employee\'s holiday request. The employee has been notified.</string>
    <string name="please_confirm_deleting_employee">Please confirm deleting employee?</string>
    <string name="delete_employee_info">This will remove all of their information from the HR, payroll and HRAdminPro systems.\n\nThis action must only be taken once an employee has been fully off-boarded, and received their final pay packet.\n\nIf you are unsure, do not delete the profile. You can restrict the user’s access to HRAdminPro without deleting information.</string>
    <string name="note_information">Note: This action can be tracked back to you. Deliberately deleting a profile for an active employee could lead to an investigation for gross misconduct.</string>
    <string name="holiday_request_reviewed">Holiday Request Reviewed</string>
    <string name="cross">Cross</string>
    <string name="denied_holiday_message">You have declined the employee\'s holiday request. The employee has been notified.</string>
    <string name="employee_details">Employee Details</string>
    <string name="data_analyst">Data Analyst</string>
    <string name="design">Design</string>
    <string name="number">07457832346</string>
    <string name="cancel_edits">Cancel Edits</string>
    <string name="confirm_edits">Confirm Edits</string>
    <string name="employee_changes_saved">Employee Changes Saved</string>
    <string name="you_have_successfully_edited_the_employee_s_information_all_changes_have_been_saved">You have successfully edited the employee\'s information. All changes have been saved.</string>
    <string name="digital_coder">Digital Coder</string>
    <string name="number2">01803522364</string>
    <string name="michaelbrown_company_com">MichaelBrown@company.com</string>
    <string name="workconnect">WorkConnect</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="employee_edit_message">Your updates have been successfully saved. All changes to your details have been applied.</string>
    <string name="holiday_request_submitted">Holiday Request Submitted</string>
    <string name="holiday_request_confirmation">Your holiday request has been successfully submitted. You will be notified once it is reviewed</string>
    <string name="stay_connected_at_work_effortlessly">Stay connected at work effortlessly!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_details">Edit Details</string>
    <string name="number4">07435050204</string>
    <string name="employee_image_pro">TODO</string>
    <string name="position_software_engineer">Position: Software Engineer</string>
    <string name="employee_contact_info">Contact Information:\nEmail: HamzaAlBiruni@company.com\nPhone: 07439550294</string>
    <string name="holiday_date_1">Request Date: 20th-25th December</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="holiday_date_2">Request Date: 20th-22nd March</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="status_active">Status: Active</string>
    <string name="new_employee_message">You have finished adding a new employee process.\n</string>
    <string name="employee_id_number">ID number: 5786</string>
</resources>